--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,9 @@ name = "pypi"
 [packages]
 wyze-sdk = {path = "."}
 requests = "*"
-blackboxprotobuf = "*"
+blackboxprotobuf = {git = "https://github.com/chandlernine/blackboxprotobuf.git@relax_requirements", editable = true}
 mintotp = "*"
+protobuf = "*"
 
 [dev-packages]
 flake8 = "*"
@@ -15,4 +16,4 @@ isort = "*"
 sphinx = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
